Footer logo overflow bugfix

--- a/resources/assets/client/scss/layout/_footer.scss
+++ b/resources/assets/client/scss/layout/_footer.scss
@@ -1,6 +1,7 @@
 #footer {
   margin-top: auto;
-  padding: 4 * $base-line;
+  padding-top: 4 * $base-line;
+  padding-bottom: 4 * $base-line;
   background-color: $theme-primary;
 }
 
